# testGithbuActions

./: Makefile.am  README.md  configure.ac
.github/workflows/: osx.yml
