noinst_PROGRAMS = tst1


if WITH_LIBDDD_PATH
LIBDDD_CPP=-I$(LIBDDD_ROOT)/include
LIBDDD_PATH=$(LIBDDD_ROOT)/lib/libDDD.a
else
LIBDDD_LINK=-lDDD
endif


AM_CPPFLAGS = $(LIBDDD_CPP) $(LIBITS_CPP) $(LIBEXPAT_CPP) $(ANTLRC_CPP) $(GMP_CPP)
AM_CXXFLAGS = -O3 -Wall -DNDEBUG 

LDADDFLAGS = $(LIBITS_PATH)  $(LIBDDD_PATH)  $(LIBDDD_LINK) $(LIBEXPAT_PATH) $(LIBEXPAT_LINK) $(ANTLRC_PATH) $(ANTLRC_LINK) $(GMP_PATH) $(GMP_LINK)
AM_LDFLAGS = $(LDFLAGS)
AM_LDFLAGS += $(STATICFLAGS)

tst1_SOURCES = tst1.cpp

tst1_LDADD = $(LDADDFLAGS) 

